added verification and removed comments